--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/lobster-two": "^4.5.10",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.11.4",
     "@mui/x-data-grid": "^5.17.17",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.1",
     "react-icons": "^4.7.1",
     "react-read-more-read-less": "^1.0.7",
@@ -27,7 +28,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
-    "vite": "^4.0.0",
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "vite": "^4.0.0"
   }
 }
